--- a/experiments/exp1_forward.ipynb
+++ b/experiments/exp1_forward.ipynb
@@ -16,15 +16,7 @@
    "execution_count": null,
    "id": "4958660a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2.2.6 2.2.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os, sys\n",
     "\n",
@@ -49,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "96972fd1",
    "metadata": {},
    "outputs": [],
@@ -90,33 +82,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "b62834ca",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/site-packages/torch/nn/modules/loss.py:535: UserWarning: Using a target size (torch.Size([100, 1])) that is different to the input size (torch.Size([100, 2])). This will likely lead to incorrect results due to broadcasting. Please ensure they have the same size.\n",
-      "  return F.mse_loss(input, target, reduction=self.reduction)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  [const] 500/2000  loss=0.470124\n",
-      "  [const] 1000/2000  loss=0.139868\n",
-      "  [const] 1500/2000  loss=0.083887\n",
-      "  [const] 2000/2000  loss=0.064286\n",
-      "  [tdep] 425/1700  loss=0.002098\n",
-      "  [tdep] 850/1700  loss=0.000300\n",
-      "  [tdep] 1275/1700  loss=0.000106\n",
-      "  [tdep] 1700/1700  loss=0.000053\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Xc, yc = make_circles_data(CFG[\"n_train\"], seed=42)\n",
     "Xt, yt = make_circles_data(CFG[\"n_train\"], seed=2)\n",
@@ -127,7 +96,7 @@
     "    for ep in range(epochs):\n",
     "        opt.zero_grad()\n",
     "        traj = odeint(model, X, t_tr)\n",
-    "        loss = nn.MSELoss()(traj[-1], y)\n",
+    "        loss = nn.MSELoss()(traj[-1, :, :1], y)\n",
     "        loss.backward(); opt.step()\n",
     "        if (ep+1) % max(1, epochs//4) == 0:\n",
     "            print(f\"  [{label}] {ep+1}/{epochs}  loss={loss.item():.6f}\")\n",
@@ -149,33 +118,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "db298c1c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[Fig 1] Trajectories...\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Numpy is not available",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mexperiments\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mexp1_plots\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[0;32m----> 2\u001b[0m \u001b[43mfig1_trajectories\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mXc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43myc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mXt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43myt\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mCFG\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mOUT\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/Desktop/Coding/CT-Dropout/experiments/exp1_plots.py:121\u001b[0m, in \u001b[0;36mfig1_trajectories\u001b[0;34m(mc, mt, Xc, yc, Xt, yt, cfg, out)\u001b[0m\n\u001b[1;32m    118\u001b[0m t_rbm \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m0\u001b[39m, cfg[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mT\u001b[39m\u001b[38;5;124m\"\u001b[39m], cfg[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mN_conv\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m    120\u001b[0m tc \u001b[38;5;241m=\u001b[39m fwd(mc, Xc, t_fine); tt \u001b[38;5;241m=\u001b[39m fwd(mt, Xt, t_fine)\n\u001b[0;32m--> 121\u001b[0m rc \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mstack([\u001b[43mrbm_fwd\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mXc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt_rbm\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msch\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m5\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mp\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    122\u001b[0m                   \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(K)])\u001b[38;5;241m.\u001b[39mmean(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m    123\u001b[0m rt \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mstack([rbm_fwd(mt, Xt, t_rbm, sch, \u001b[38;5;241m5\u001b[39m, p)\n\u001b[1;32m    124\u001b[0m                   \u001b[38;5;28;01mfor\u001b[39;00m _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(K)])\u001b[38;5;241m.\u001b[39mmean(\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m    126\u001b[0m fig, axes \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39msubplots(\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m5\u001b[39m, figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m22\u001b[39m, \u001b[38;5;241m4.2\u001b[39m))\n",
-      "File \u001b[0;32m~/Desktop/Coding/CT-Dropout/experiments/exp1_plots.py:67\u001b[0m, in \u001b[0;36mrbm_fwd\u001b[0;34m(model, X, t_span, scheme, rep, p)\u001b[0m\n\u001b[1;32m     65\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrbm_fwd\u001b[39m(model, X, t_span, scheme, rep, p):\n\u001b[1;32m     66\u001b[0m     sched \u001b[38;5;241m=\u001b[39m sample_batch_sequence(scheme, \u001b[38;5;28mlen\u001b[39m(t_span), p\u001b[38;5;241m=\u001b[39mp, rep\u001b[38;5;241m=\u001b[39mrep)\n\u001b[0;32m---> 67\u001b[0m     rbm \u001b[38;5;241m=\u001b[39m \u001b[43m_rbm_cls\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m)\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mt_span\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msched\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mscheme\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpi_min\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     68\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m torch\u001b[38;5;241m.\u001b[39mno_grad():\n\u001b[1;32m     69\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m odeint(rbm, X, t_span, method\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mrk4\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     70\u001b[0m                       options\u001b[38;5;241m=\u001b[39m{\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstep_size\u001b[39m\u001b[38;5;124m\"\u001b[39m: _dt(t_span)})\n",
-      "File \u001b[0;32m~/Desktop/Coding/CT-Dropout/rnode/models.py:101\u001b[0m, in \u001b[0;36mRBMConstant.__init__\u001b[0;34m(self, trained_func, t_span, list_batches, pi)\u001b[0m\n\u001b[1;32m     99\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mW2 \u001b[38;5;241m=\u001b[39m trained_func\u001b[38;5;241m.\u001b[39mfc2\u001b[38;5;241m.\u001b[39mweight\n\u001b[1;32m    100\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpi \u001b[38;5;241m=\u001b[39m pi\n\u001b[0;32m--> 101\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mt_vals \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(\u001b[43mt_span\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcpu\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mtolist())\n\u001b[1;32m    102\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlist_batches \u001b[38;5;241m=\u001b[39m list_batches\n\u001b[1;32m    103\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mactivation \u001b[38;5;241m=\u001b[39m trained_func\u001b[38;5;241m.\u001b[39mactivation\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Numpy is not available"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from experiments.exp1_plots import *\n",
     "fig1_trajectories(mc, mt, Xc, yc, Xt, yt, CFG, OUT)"
@@ -314,7 +260,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv (3.12.2)",
    "language": "python",
    "name": "python3"
   },
